refactored header/footer components
- created UI Components lib
- Joke card needs to be in its own feature lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@htd/shared/ui-nebular": ["libs/shared/ui-nebular/src/index.ts"]
+      "@htd/shared/ui-nebular": ["libs/shared/ui-nebular/src/index.ts"],
+      "@htd/shared/ui-components": ["libs/shared/ui-components/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
