--- a/angular.json
+++ b/angular.json
@@ -154,6 +154,37 @@
           "styleext": "scss"
         }
       }
+    },
+    "shared-ui-components": {
+      "projectType": "library",
+      "root": "libs/shared/ui-components",
+      "sourceRoot": "libs/shared/ui-components/src",
+      "prefix": "htd",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/ui-components/tsconfig.lib.json",
+              "libs/shared/ui-components/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/shared/ui-components/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/ui-components/jest.config.js",
+            "tsConfig": "libs/shared/ui-components/tsconfig.spec.json",
+            "setupFile": "libs/shared/ui-components/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
     }
   },
   "cli": {
