create libs - data access - feature code
set workspace default style to scss

--- a/nx.json
+++ b/nx.json
@@ -19,6 +19,12 @@
     },
     "shared-ui-components": {
       "tags": []
+    },
+    "feature-joke": {
+      "tags": ["feature"]
+    },
+    "feature-joke-data-access-joke": {
+      "tags": ["data-access"]
     }
   }
 }
