add shared style library

--- a/angular.json
+++ b/angular.json
@@ -250,6 +250,21 @@
           "styleext": "scss"
         }
       }
+    },
+    "shared-styles": {
+      "root": "libs/shared/styles",
+      "sourceRoot": "libs/shared/styles/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/shared/styles/tsconfig.lib.json"],
+            "exclude": ["**/node_modules/**", "!libs/shared/styles/**"]
+          }
+        }
+      }
     }
   },
   "cli": {
