--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@htd/feature-joke": ["libs/feature-joke/src/index.ts"],
       "@htd/feature-joke/data-access-joke": [
         "libs/feature-joke/data-access-joke/src/index.ts"
-      ]
+      ],
+      "@htd/interfaces": ["libs/interfaces/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
