--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "baseUrl": ".",
     "paths": {
       "@htd/shared/ui-nebular": ["libs/shared/ui-nebular/src/index.ts"],
-      "@htd/shared/ui-components": ["libs/shared/ui-components/src/index.ts"]
+      "@htd/shared/ui-components": ["libs/shared/ui-components/src/index.ts"],
+      "@htd/feature-joke": ["libs/feature-joke/src/index.ts"],
+      "@htd/feature-joke/data-access-joke": [
+        "libs/feature-joke/data-access-joke/src/index.ts"
+      ],
+      "@htd/interfaces": ["libs/interfaces/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
