--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "^8.2.0",
     "@nebular/eva-icons": "^4.6.0",
     "@nebular/theme": "^4.6.0",
+    "@ngx-pwa/local-storage": "^8.2.3",
     "@nrwl/angular": "8.9.0",
     "core-js": "^2.5.4",
     "eva-icons": "^1.1.2",
@@ -63,6 +64,7 @@
     "dotenv": "6.2.0",
     "eslint": "6.1.0",
     "jest": "24.1.0",
+    "jest-localstorage-mock": "^2.4.0",
     "jest-preset-angular": "7.0.0",
     "ng-mocks": "^8.1.0",
     "prettier": "1.18.2",
