--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
         "libs/feature-joke/data-access-joke/src/index.ts"
       ],
       "@htd/interfaces": ["libs/interfaces/src/index.ts"],
-      "@htd/feature-joke-state": ["libs/feature-joke-state/src/index.ts"]
+      "@htd/feature-joke-state": ["libs/feature-joke-state/src/index.ts"],
+      "@htd/data-access-share": ["libs/data-access-share/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
